Added ugly perftree functionality.